--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-__pycache__
 .ipynb_checkpoints
 .mypy_cache
 *.ipynb
@@ -7,11 +6,22 @@ __pycache__
 *.html
 *.pyd
 
+# Compiled source
+__pycache__
+build
+*.so
+
+# Miscellaneous
+Configs
+data
+testdata
 *.csv
 *.tsv
 *.png
 *.svg
 *.txt
+*.zip
+.DS_Store
 
 # Data files
 *.mzml
