Implement RandomForest model
Also:
- Add ability to use ProteinPilot XML results files for validation
- Begin adding joblib parallelization
- Add dependencies to requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
+cloudpickle
 cython
+joblib
 lxml
 msgpack
+numba
 numpy
 openpyxl
 overrides
 pandas
 scipy
 sklearn
+statsmodels
 tqdm
-pepfrag==0.2
+pepfrag==0.3
